// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing Page Clicking portfolio switch shows empty portfolio 1`] = `
<div>
  <div
    class="MuiContainer-root-10 makeStyles-landingContainer-1 MuiContainer-maxWidthLg-16"
  >
    <div
      class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-spacing-xs-1-41 MuiGrid-justify-xs-center-36"
    >
      <div
        class="MuiGrid-root-18 makeStyles-headerContainer-2 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
      >
        <div
          class="makeStyles-headerContainer-122"
        >
          <div
            class="makeStyles-headerContent-123"
          >
            <h2
              class="MuiTypography-root-124 MuiTypography-h2-130 MuiTypography-colorTextPrimary-149"
            >
              Sett Vaults
            </h2>
            <h6
              class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextSecondary-150"
            >
              Powerful Bitcoin strategies. Automatic staking rewards.
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-121"
          >
            <div
              class="MuiInputBase-root-181 MuiOutlinedInput-root-166 MuiInputBase-colorSecondary-190 MuiOutlinedInput-colorSecondary-167 makeStyles-gasSelector-154 MuiInputBase-adornedStart-185 MuiOutlinedInput-adornedStart-170"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-199"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-155 MuiSelect-select-156 MuiSelect-selectMenu-159 MuiSelect-outlined-158 MuiInputBase-input-192 MuiOutlinedInput-input-176 MuiInputBase-inputAdornedStart-196 MuiOutlinedInput-inputAdornedStart-179"
                role="button"
                tabindex="0"
              >
                75
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-165"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-199 MuiSelect-icon-161 MuiSelect-iconOutlined-164"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-212 MuiOutlinedInput-notchedOutline-175"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-213"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-contained-228 makeStyles-walletButton-219 MuiButton-containedSecondary-230 MuiButton-disableElevation-231"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-221"
              >
                0x1a1a1...a1a1a1a
                <span
                  class="MuiButton-endIcon-245 MuiButton-iconSizeMedium-247"
                >
                  <div
                    class="makeStyles-walletDot-216 makeStyles-greenDot-218"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-357"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-18 makeStyles-widgetContainer-5 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
      >
        <div>
          <label
            class="MuiFormControlLabel-root-253 makeStyles-walletSlider-252"
          >
            <span
              class="MuiSwitch-root-259"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root-249 MuiIconButton-root-275 PrivateSwitchBase-root-271 MuiSwitch-switchBase-262 MuiSwitch-colorPrimary-263 PrivateSwitchBase-checked-272 MuiSwitch-checked-266"
              >
                <span
                  class="MuiIconButton-label-283"
                >
                  <input
                    class="PrivateSwitchBase-input-274 MuiSwitch-input-268"
                    type="checkbox"
                    value=""
                  />
                  <span
                    class="MuiSwitch-thumb-269"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-357"
                />
              </span>
              <span
                class="MuiSwitch-track-270"
              />
            </span>
            <span
              class="MuiTypography-root-124 MuiFormControlLabel-label-258 MuiTypography-body1-126"
            >
              Portfolio View
            </span>
          </label>
        </div>
        <div
          class="makeStyles-pickerContainer-9"
        >
          <div
            class="MuiInputBase-root-181 MuiOutlinedInput-root-166 makeStyles-samplePicker-284"
            style="margin-top: auto; margin-bottom: auto;"
            title="ROI combines the appreciation of the vault with its $BADGER or $DIGG emissions. All numbers are an approximation based on historical data."
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root-155 MuiSelect-select-156 MuiSelect-selectMenu-159 MuiSelect-outlined-158 MuiInputBase-input-192 MuiOutlinedInput-input-176"
              role="button"
              tabindex="0"
            >
              YEAR
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-165"
              tabindex="-1"
              value="year"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-199 MuiSelect-icon-161 MuiSelect-iconOutlined-164"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-212 MuiOutlinedInput-notchedOutline-175"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-213"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <div
            class="MuiInputBase-root-181 MuiOutlinedInput-root-166 makeStyles-currencyPicker-296"
            style="margin-top: auto; margin-bottom: auto;"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root-155 MuiSelect-select-156 MuiSelect-selectMenu-159 MuiSelect-outlined-158 MuiInputBase-input-192 MuiOutlinedInput-input-176"
              role="button"
              tabindex="0"
            >
              USD
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-165"
              tabindex="-1"
              value="usd"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-199 MuiSelect-icon-161 MuiSelect-iconOutlined-164"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-212 MuiOutlinedInput-notchedOutline-175"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-213"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-md-4-84"
      >
        <div
          class="MuiPaper-root-300 makeStyles-infoPaper-297 MuiPaper-elevation2-305 MuiPaper-rounded-301"
        >
          <h6
            class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextPrimary-149"
          >
            Total Value Locked
          </h6>
          <span
            class="MuiSkeleton-root-328 MuiSkeleton-text-329 MuiSkeleton-withChildren-336 MuiSkeleton-fitContent-337 MuiSkeleton-heightAuto-338 MuiSkeleton-wave-334"
          >
            <h5
              class="MuiTypography-root-124 MuiTypography-h5-133"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-md-4-84"
      >
        <div
          class="MuiPaper-root-300 makeStyles-infoPaper-297 MuiPaper-elevation2-305 MuiPaper-rounded-301"
        >
          <h6
            class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextPrimary-149"
          >
            Your Portfolio
          </h6>
          <span
            class="MuiSkeleton-root-328 MuiSkeleton-text-329 MuiSkeleton-withChildren-336 MuiSkeleton-fitContent-337 MuiSkeleton-heightAuto-338 MuiSkeleton-wave-334"
          >
            <h5
              class="MuiTypography-root-124 MuiTypography-h5-133"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-md-4-84"
      >
        <div
          class="MuiPaper-root-300 makeStyles-infoPaper-297 MuiPaper-elevation2-305 MuiPaper-rounded-301"
        >
          <h6
            class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextPrimary-149"
          >
            Badger Price
          </h6>
          <span
            class="MuiSkeleton-root-328 MuiSkeleton-text-329 MuiSkeleton-withChildren-336 MuiSkeleton-fitContent-337 MuiSkeleton-heightAuto-338 MuiSkeleton-wave-334"
          >
            <h5
              class="MuiTypography-root-124 MuiTypography-h5-133"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-settListContainer-339"
    >
      <div
        class="makeStyles-loaderContainer-340"
      >
        <div
          class="MuiCircularProgress-root-342 MuiCircularProgress-colorPrimary-346 MuiCircularProgress-indeterminate-344"
          role="progressbar"
          style="width: 60px; height: 60px;"
        >
          <svg
            class="MuiCircularProgress-svg-348"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle-349 MuiCircularProgress-circleIndeterminate-351"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
        <p
          class="MuiTypography-root-124 makeStyles-loaderMessage-341 MuiTypography-body1-126"
        >
          Loading Ethereum Setts...
        </p>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Landing Page Renders correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-10 makeStyles-landingContainer-1 MuiContainer-maxWidthLg-16"
  >
    <div
      class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-spacing-xs-1-41 MuiGrid-justify-xs-center-36"
    >
      <div
        class="MuiGrid-root-18 makeStyles-headerContainer-2 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
      >
        <div
          class="makeStyles-headerContainer-122"
        >
          <div
            class="makeStyles-headerContent-123"
          >
            <h2
              class="MuiTypography-root-124 MuiTypography-h2-130 MuiTypography-colorTextPrimary-149"
            >
              Sett Vaults
            </h2>
            <h6
              class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextSecondary-150"
            >
              Powerful Bitcoin strategies. Automatic staking rewards.
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-121"
          >
            <div
              class="MuiInputBase-root-181 MuiOutlinedInput-root-166 MuiInputBase-colorSecondary-190 MuiOutlinedInput-colorSecondary-167 makeStyles-gasSelector-154 MuiInputBase-adornedStart-185 MuiOutlinedInput-adornedStart-170"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-199"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-155 MuiSelect-select-156 MuiSelect-selectMenu-159 MuiSelect-outlined-158 MuiInputBase-input-192 MuiOutlinedInput-input-176 MuiInputBase-inputAdornedStart-196 MuiOutlinedInput-inputAdornedStart-179"
                role="button"
                tabindex="0"
              >
                75
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-165"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-199 MuiSelect-icon-161 MuiSelect-iconOutlined-164"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-212 MuiOutlinedInput-notchedOutline-175"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-213"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-contained-228 makeStyles-walletButton-219 MuiButton-containedSecondary-230 MuiButton-disableElevation-231"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-221"
              >
                0x1a1a1...a1a1a1a
                <span
                  class="MuiButton-endIcon-245 MuiButton-iconSizeMedium-247"
                >
                  <div
                    class="makeStyles-walletDot-216 makeStyles-greenDot-218"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-357"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-18 makeStyles-widgetContainer-5 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
      >
        <div>
          <label
            class="MuiFormControlLabel-root-253 makeStyles-walletSlider-252"
          >
            <span
              class="MuiSwitch-root-259"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root-249 MuiIconButton-root-275 PrivateSwitchBase-root-271 MuiSwitch-switchBase-262 MuiSwitch-colorPrimary-263"
              >
                <span
                  class="MuiIconButton-label-283"
                >
                  <input
                    class="PrivateSwitchBase-input-274 MuiSwitch-input-268"
                    type="checkbox"
                    value=""
                  />
                  <span
                    class="MuiSwitch-thumb-269"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-357"
                />
              </span>
              <span
                class="MuiSwitch-track-270"
              />
            </span>
            <span
              class="MuiTypography-root-124 MuiFormControlLabel-label-258 MuiTypography-body1-126"
            >
              Portfolio View
            </span>
          </label>
        </div>
        <div
          class="makeStyles-pickerContainer-9"
        >
          <div
            class="MuiInputBase-root-181 MuiOutlinedInput-root-166 makeStyles-samplePicker-284"
            style="margin-top: auto; margin-bottom: auto;"
            title="ROI combines the appreciation of the vault with its $BADGER or $DIGG emissions. All numbers are an approximation based on historical data."
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root-155 MuiSelect-select-156 MuiSelect-selectMenu-159 MuiSelect-outlined-158 MuiInputBase-input-192 MuiOutlinedInput-input-176"
              role="button"
              tabindex="0"
            >
              YEAR
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-165"
              tabindex="-1"
              value="year"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-199 MuiSelect-icon-161 MuiSelect-iconOutlined-164"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-212 MuiOutlinedInput-notchedOutline-175"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-213"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <div
            class="MuiInputBase-root-181 MuiOutlinedInput-root-166 makeStyles-currencyPicker-296"
            style="margin-top: auto; margin-bottom: auto;"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root-155 MuiSelect-select-156 MuiSelect-selectMenu-159 MuiSelect-outlined-158 MuiInputBase-input-192 MuiOutlinedInput-input-176"
              role="button"
              tabindex="0"
            >
              USD
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-165"
              tabindex="-1"
              value="usd"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-199 MuiSelect-icon-161 MuiSelect-iconOutlined-164"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-212 MuiOutlinedInput-notchedOutline-175"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-213"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-md-4-84"
      >
        <div
          class="MuiPaper-root-300 makeStyles-infoPaper-297 MuiPaper-elevation2-305 MuiPaper-rounded-301"
        >
          <h6
            class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextPrimary-149"
          >
            Total Value Locked
          </h6>
          <span
            class="MuiSkeleton-root-328 MuiSkeleton-text-329 MuiSkeleton-withChildren-336 MuiSkeleton-fitContent-337 MuiSkeleton-heightAuto-338 MuiSkeleton-wave-334"
          >
            <h5
              class="MuiTypography-root-124 MuiTypography-h5-133"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-md-4-84"
      >
        <div
          class="MuiPaper-root-300 makeStyles-infoPaper-297 MuiPaper-elevation2-305 MuiPaper-rounded-301"
        >
          <h6
            class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextPrimary-149"
          >
            Your Portfolio
          </h6>
          <span
            class="MuiSkeleton-root-328 MuiSkeleton-text-329 MuiSkeleton-withChildren-336 MuiSkeleton-fitContent-337 MuiSkeleton-heightAuto-338 MuiSkeleton-wave-334"
          >
            <h5
              class="MuiTypography-root-124 MuiTypography-h5-133"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-md-4-84"
      >
        <div
          class="MuiPaper-root-300 makeStyles-infoPaper-297 MuiPaper-elevation2-305 MuiPaper-rounded-301"
        >
          <h6
            class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextPrimary-149"
          >
            Badger Price
          </h6>
          <span
            class="MuiSkeleton-root-328 MuiSkeleton-text-329 MuiSkeleton-withChildren-336 MuiSkeleton-fitContent-337 MuiSkeleton-heightAuto-338 MuiSkeleton-wave-334"
          >
            <h5
              class="MuiTypography-root-124 MuiTypography-h5-133"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-settListContainer-339"
    >
      <div
        class="makeStyles-loaderContainer-340"
      >
        <div
          class="MuiCircularProgress-root-342 MuiCircularProgress-colorPrimary-346 MuiCircularProgress-indeterminate-344"
          role="progressbar"
          style="width: 60px; height: 60px;"
        >
          <svg
            class="MuiCircularProgress-svg-348"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle-349 MuiCircularProgress-circleIndeterminate-351"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
        <p
          class="MuiTypography-root-124 makeStyles-loaderMessage-341 MuiTypography-body1-126"
        >
          Loading Ethereum Setts...
        </p>
      </div>
      <div />
    </div>
  </div>
</div>
`;
